--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version"      : "0.0.1",
   "description"  : "Scrape le web.",
   "main"         : "server.js",
-  "author"       : "Scotch",
+  "author"       : "Davy",
   "dependencies" : {
-    "express"    : "latest",
     "request"    : "latest",
     "cheerio"    : "latest"
   }
