--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author"       : "Davy",
   "dependencies" : {
     "request"    : "latest",
-    "cheerio"    : "latest"
+    "cheerio"    : "latest",
+    "zombie"     : "latest"
   }
 }
